--- a/Budget_planner/views/budget_user_views.xml
+++ b/Budget_planner/views/budget_user_views.xml
@@ -4,7 +4,7 @@
     <record id="budget_user_action" model="ir.actions.act_window">
         <field name="name">Budgets</field>
         <field name="res_model">budget.user</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">kanban,tree,form</field>
     </record>
     <record id="budget_user_view_tree" model="ir.ui.view">
         <field name="name">budget.user.view.tree</field>
@@ -54,6 +54,35 @@
         </field>
     </record>
 
+    <record id="budget_user_view_kanban" model="ir.ui.view">
+        <field name="name">budget.user.kanban</field>
+        <field name="model">budget.user</field>
+        <field name="arch" type="xml">
+            <kanban default_group_by="budget_category" records_draggable="1">
+                <templates>
+                    <t t-name="kanban-box">
+                        <div class="oe_kanban_global_click">
+                            <div>
+                                <strong class="o_kanban_record_title">
+                                    <field name="name"/>
+                                </strong>
+                            </div>
+                            <div>
+                                Amount: <field name="amount"/>
+                            </div> 
+                            <div>
+                                state: <field name="state"/>
+                            </div> 
+                            <div>
+                                End date: <field name="end_date"/>
+                            </div>              
+                        </div>
+                    </t>
+                </templates>
+            </kanban>
+        </field>
+    </record> 
+  
     <record id="budget_user_view_search" model="ir.ui.view">
         <field name="name">budget.user.search</field>
         <field name="model">budget.user</field>
@@ -61,7 +90,10 @@
             <search>
                 <field name="name"/>
                 <field name="state"/>
-                <field name="start_date"/>        
+                <field name="start_date"/>
+                <group expand="1" string="Group By">
+                    <filter string="Budget category" name='budget_category' context="{'group_by':'budget_category'}"/>
+                </group>       
             </search>
         </field>
       </record>
